--- a/style.css
+++ b/style.css
@@ -24,3 +24,10 @@ body {
     display: inline-block;
     cursor: pointer;
 } */
+/* #btn {
+    background-color: aqua;
+    margin: 1rem;
+    padding: 1rem;
+    width: 1rem;
+    height: 1rem;
+} */
